Fixed Occurannces input alignment.

--- a/src/less/phraseOccurrence.less
+++ b/src/less/phraseOccurrence.less
@@ -8,6 +8,12 @@ div#goExampleFindOccurrencePageWrapper {
   overflow: auto;
 }
 
+div#goExampleFindOcurancesInsideWrapper {
+  align-items: center;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .flex-gt-sm button {
   color: white;
   background-color: rgb(255,64,129);
